overflow problem solved

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -23,6 +23,9 @@
 .text-prmry {
     color: var(--logo-color);
 }
+section{
+  overflow-x: hidden !important;
+}
 h1,
 h2,
 h3,
